-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.3
-
None
-
-
3fbb6a957227968951283107813271218058b719 (qt/qtbase/5.12)
- The following code snippet will try to overwrite an exist file, the result is that the old data won't be cleared. It doesn't work on UWP at least.
QFile file(filePath);
file.open(QFile::WriteOnly | QFile::Truncate);
For Gerrit Dashboard: QTBUG-77095 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
268355,7 | QWinRTFileEngine: Handle QIODevice::Truncate when opening files | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |
268375,8 | Move processOpenModeFlags out of QFSFileEngine | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |